--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ising Model Simulation</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./ising.js" defer></script>
 </head>
 <body>
-    
+    <h1>Ising Model Simulation</h1>
+    <canvas id="canvas"></canvas>
 </body>
 </html>
