--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     <h1>Ising Model Simulation</h1>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="800" height="500"></canvas>
+    <div>
+        <p>Number of spins: <span id="number-of-spins">0</span></p>
+        <p>Exchange constant: <span id="exchange-constant">0</span></p>
+        <p>Temperature: <span id="temperature">0</span></p>
+        <p>Energy: <span id="energy">0</span></p>
+        <p>Magnetization: <span id="magnetization">0</span></p>
+        <p>Monte-Carlo steps: <span id="steps">0</span></p>
+    </div>
 </body>
 </html>
