--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ising Model Simulation</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
     <link rel="stylesheet" href="./style.css">
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
     <script src="./ising.js" defer></script>
 </head>
 <body>
     <h1>Ising Model Simulation</h1>
-    <canvas id="canvas" width="1200" height="504"></canvas>
-    <div>
-        <p>Number of spins: <span id="number-of-spins">0</span></p>
-        <p>Exchange constant: <span id="exchange-constant">0</span></p>
-        <p>Temperature: <span id="temperature">0</span></p>
-        <p>Energy: <span id="energy">0</span></p>
-        <p>Magnetization: <span id="magnetization">0</span></p>
-        <p>Monte-Carlo steps: <span id="steps">0</span></p>
-    </div>
+    <button id="continue" disabled>Devam</button>
+    <p id="properties">
+        N=<span id="number-of-spins">0</span>,
+        J=<span id="exchange-constant">0</span>,
+        T=<span id="temperature">0</span>,
+        $\langle{E}\rangle$=<span id="energy">0</span>,
+        $\langle{M}\rangle$=<span id="magnetization">0</span>,
+        MC Adımları=<span id="steps">0</span>
+    </p>
+    <canvas id="canvas" width="1200" height="704"></canvas>
 </body>
 </html>
